--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.6.1",
     "@clerk/nextjs": "^4.16.4",
+    "@clerk/themes": "^1.6.3",
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "formik": "^2.2.9",
+    "framer-motion": "^10.12.7",
     "next": "13.3.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
