--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/themes": "^1.6.3",
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
