--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "formik": "^2.2.9",
@@ -28,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "svix": "^0.84.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
