--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "railway:dev": "yarn railway:dev"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.6.1",
@@ -29,6 +30,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5",
     "svix": "^0.84.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
