--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "dotenv": "^16.0.3",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "formik": "^2.2.9",
     "framer-motion": "^10.12.7",
+    "mongodb": "^5.5.0",
+    "mongoose": "^7.1.1",
     "next": "13.3.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
@@ -33,6 +36,10 @@
     "react-redux": "^8.0.5",
     "svix": "^0.84.1",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "yup": "^1.1.1"
+  },
+  "devDependencies": {
+    "@types/mongoose": "^5.11.97"
   }
 }
