--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "13.3.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-datepicker": "^4.12.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
@@ -40,6 +41,7 @@
     "yup": "^1.1.1"
   },
   "devDependencies": {
-    "@types/mongoose": "^5.11.97"
+    "@types/mongoose": "^5.11.97",
+    "@types/react-datepicker": "^4.11.2"
   }
 }
