--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.6.1",
-    "@clerk/nextjs": "^4.16.4",
+    "@clerk/nextjs": "^4.19.1",
     "@clerk/themes": "^1.6.3",
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
@@ -26,22 +26,20 @@
     "eslint-config-next": "13.3.4",
     "formik": "^2.2.9",
     "framer-motion": "^10.12.7",
+    "lodash": "^4.17.21",
     "mongodb": "^5.5.0",
     "mongoose": "^7.1.1",
-    "next": "13.3.4",
+    "next": "^13.4.4",
     "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-datepicker": "^4.12.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
-    "svix": "^0.84.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "yup": "^1.1.1"
   },
   "devDependencies": {
-    "@types/mongoose": "^5.11.97",
-    "@types/react-datepicker": "^4.11.2"
+    "@types/mongoose": "^5.11.97"
   }
 }
