--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@chakra-ui/react": "^2.6.1",
     "@clerk/nextjs": "^4.19.1",
     "@clerk/themes": "^1.6.3",
-    "@emotion/react": "^11.10.8",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.10.8",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "18.16.3",
@@ -32,6 +32,7 @@
     "next": "^13.4.4",
     "postcss": "8.4.23",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
