--- a/package.json
+++ b/package.json
@@ -19,24 +19,24 @@
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
-    "autoprefixer": "10.4.14",
+    "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "formik": "^2.2.9",
     "framer-motion": "^10.12.7",
-    "lodash": "^4.17.21",
     "mongodb": "^5.5.0",
     "mongoose": "^7.1.1",
     "next": "^13.4.4",
-    "postcss": "8.4.23",
+    "postcss": "^8.4.24",
+    "postcss-preset-env": "^8.5.0",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
-    "tailwindcss": "3.3.2",
+    "tailwindcss": "^3.3.2",
     "typescript": "5.0.4",
     "yup": "^1.1.1"
   },
