--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.0.3",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
@@ -34,6 +35,7 @@
     "postcss": "8.4.23",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.3",
+    "react-day-picker": "^8.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
