--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "railway:dev": "yarn railway:dev"
+    "lint": "next lint"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.6.1",
@@ -21,7 +20,6 @@
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
-    "date-fns": "^2.30.0",
     "dotenv": "^16.0.3",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
@@ -34,14 +32,11 @@
     "next-axiom": "^0.17.0",
     "postcss": "8.4.23",
     "react": "^18.2.0",
-    "react-awesome-reveal": "^4.2.3",
-    "react-day-picker": "^8.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4",
-    "yup": "^1.1.1"
+    "typescript": "5.0.4"
   },
   "devDependencies": {
     "@types/mongoose": "^5.11.97"
