--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "@vercel/analytics": "^1.0.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
@@ -28,12 +29,13 @@
     "lodash": "^4.17.21",
     "mongodb": "^5.5.0",
     "mongoose": "^7.1.1",
-    "next": "^13.4.4",
+    "next": "^13.4.8",
     "next-axiom": "^0.17.0",
     "postcss": "8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-parallax-tilt": "^1.7.150",
     "react-redux": "^8.0.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
