--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "lodash": "^4.17.21",
     "mongodb": "^5.5.0",
     "mongoose": "^7.1.1",
-    "next": "^13.4.8",
+    "next": "^13.4.9",
     "next-axiom": "^0.17.0",
     "postcss": "8.4.23",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.5",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-parallax-tilt": "^1.7.150",
