--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.6.1",
-    "@clerk/nextjs": "^4.19.1",
+    "@clerk/nextjs": "^4.21.14",
     "@clerk/themes": "^1.6.3",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.10.8",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-query": "^4.29.19",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
@@ -38,10 +39,12 @@
     "react-icons": "^4.8.0",
     "react-parallax-tilt": "^1.7.150",
     "react-redux": "^8.0.5",
+    "react-scroll": "^1.8.9",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@types/mongoose": "^5.11.97"
+    "@types/mongoose": "^5.11.97",
+    "@types/react-scroll": "^1.8.7"
   }
 }
