--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next-axiom": "^0.17.0",
     "postcss": "8.4.23",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.5",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-parallax-tilt": "^1.7.150",
