--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-icons": "^4.8.0",
     "react-parallax-tilt": "^1.7.150",
     "react-redux": "^8.0.5",
+    "react-textarea-autosize": "^8.5.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
